package edu.fiuba.algo3.modelo;
//modelo -> logica del juego
public class Jugador {
}
